<resources>
    <string name="app_name">掌上教务处</string>
    <string name="userName">学号</string>
    <string name="password">密码</string>
    <string name="loginButton">登录</string>
    <string name="getSchedule">课程表</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="courseName">课程名称：</string>
    <string name="teacherName">教师：</string>
    <string name="classTime">上课时间：</string>
    <string name="classroom">教室：</string>
    <string name="MainPage">主页</string>
    <string name="Schedule">课程表</string>
    <string name="Exam">考试</string>
    <string name="Grade">成绩</string>
    <string name="Bit_only">北理乐学</string>
    <string name="Edu_web">教务处</string>
    <string name="recent_exam">近期考试：</string>
    <string name="edu_check">教务查询</string>
    <string name="application">应用</string>
    <string name="Place_wait">请稍候...</string>
    <string name="main_page">首页</string>
    <string name="schedule">课程表</string>
    <string name="exam">考试</string>
    <string name="grade">成绩</string>
    <string name="logout">注销</string>
    <string name="check_update">检查更新</string>
</resources>
