<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lepetit.schedule.ScheduleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.GridLayout
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="8"
            app:rowCount="14">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Monday"
                app:layout_column="1"
                app:layout_columnWeight="2"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Tuesday"
                app:layout_column="2"
                app:layout_columnWeight="2"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Wednesday"
                app:layout_column="3"
                app:layout_columnWeight="2"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Thursday"
                app:layout_column="4"
                app:layout_columnWeight="2"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Friday"
                app:layout_column="5"
                app:layout_columnWeight="2"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Saturday"
                app:layout_column="6"
                app:layout_columnWeight="2"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/Sunday"
                app:layout_column="7"
                app:layout_columnWeight="2"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="1"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="2"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="3"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="4"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="5"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="6"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="7"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="8"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="9"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="10"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eleven"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="11"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twelve"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="12"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirteen"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_column="0"
                app:layout_row="13"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"/>

        </android.support.v7.widget.GridLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>