<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/courseName" />

    <TextView
        android:id="@+id/course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacherName"
        android:padding="5dp" />

    <TextView
        android:id="@+id/teacher_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classTime"
        android:padding="5dp" />

    <TextView
        android:id="@+id/class_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classroom"
        android:padding="5dp" />

    <TextView
        android:id="@+id/classroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" />
</LinearLayout>
